# demo-etl-sqlmesh-omop

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-ci.yaml
models/: full_model.sql  incremental_model.sql
sqlmesh_project/: config.yaml  config.yaml.example
sqlmesh_project/.cache/model_definition/: 0_121_25_20_56__models__full_model__1725691731_3030224__2311234455__db__local  0_121_25_20_56__models__full_model__1725695691_3343904__573878204__your_database__local  0_121_25_20_56__models__full_model__1725695828_6068668__4262622292__your_database__local  0_121_25_20_56__models__full_model__1725696077_866665__881493596__your_database__local  0_121_25_20_56__models__full_model__1725697937_7192562__2953655013__your_database__local  0_121_25_20_56__models__full_model__1725697981_9715188__2442391431__your_database__local  0_121_25_20_56__models__full_model__1725698247_2298694__4262622292__your_database__local  0_121_25_20_56__models__full_model__1725699084_0882578__4262622292__your_database__local  0_121_25_20_56__models__full_model__1725703028_9037263__986700853__sqlmesh_db__local  0_121_25_20_56__models__full_model__1725703261_7389228__986700853__sqlmesh_db__local  0_121_25_20_56__models__full_model__1725705212_2222178__986700853__sqlmesh_db__local  0_121_25_20_56__models__full_model__1725705267_279732__986700853__sqlmesh_db__local  (+12 more)
sqlmesh_project/macros/: __init__.py
sqlmesh_project/models/: seed_model.sql
sqlmesh_project/models/care_site/: care_site.sql
sqlmesh_project/tests/: test_full_model.yaml
(+22 files in other folders)
