[tool.poetry]
name = "demo-etl-sqlmesh-omop"
version = "0.1.0"
description = ""
authors = ["Sidataplus <Sidaplus@mail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlmesh = {extras = ["postgres", "web"], version = "^0.121.0"}



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
